clean some code, will do things bellow before merge
- simple docstring
- tests and error msg
- tutorial and use flow

--- a/dashboard/static/css/dash-0.1.2.css
+++ b/dashboard/static/css/dash-0.1.2.css
@@ -212,3 +212,11 @@ body {
   background-color: white;
   top: 10px;
 }
+
+/*
+remove the blue outline when click the button in bootstrap 3
+related questions: http://stackoverflow.com/questions/23333231/bootstrap-button-shows-blue-outline-when-clicked
+*/
+.fa-circle-o-notch:focus,.fa-circle-o-notch:active {
+   outline: none !important;
+}
