--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -98,15 +98,15 @@
               </td>
               <td style="padding: 0px; width: 70%; background-color: white;border: none;">
                   <div class="btn-group" id="graph-type">
-                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartModal('table')"><i class="fa fa-fw fa-lg fa-table"></i></button>
-                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartModal('bar')"><i class="fa fa-fw fa-lg fa-bar-chart-o"></i></button>
-                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartModal('line')"><i class="fa fa-fw fa-lg fa-line-chart"></i></button>
-                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartModal('pie')"><i class="fa fa-fw fa-lg fa-pie-chart"></i></button>
-                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartModal('area')"><i class="fa fa-fw fa-lg fa-area-chart"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartIntoModal('table')"><i class="fa fa-fw fa-lg fa-table"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartIntoModal('bar')"><i class="fa fa-fw fa-lg fa-bar-chart-o"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartIntoModal('line')"><i class="fa fa-fw fa-lg fa-line-chart"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartIntoModal('pie')"><i class="fa fa-fw fa-lg fa-pie-chart"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartIntoModal('area')"><i class="fa fa-fw fa-lg fa-area-chart"></i></button>
                  </div>
               </td>
               <td style="padding: 0px; width: 5%; background-color: inherit; border: none;"><button type="button" class="btn btn-default btn-sm" data-dismiss="modal"><i class="fa fa-fw fa-lg fa-close" style="color: black;"></i></button></td>
-              <td style="padding: 0px; width: 5%; background-color: inherit; border: none;"><button type="button" class="btn btn-primary btn-sm" data-dismiss="modal" onclick="saveGraph_v2()"><i class="fa fa-fw fa-lg fa-check" style="color: black;"></i></button></td>
+              <td style="padding: 0px; width: 5%; background-color: inherit; border: none;"><button type="button" class="btn btn-primary btn-sm" data-dismiss="modal" onclick="saveGraph()"><i class="fa fa-fw fa-lg fa-check" style="color: black;"></i></button></td>
             </tr>
             </tbody>
           </table>
@@ -125,8 +125,8 @@ $(document).ready(function() {
   setTimeout(function(){}, 3000);
   initGridstack();
   setTimeout(function(){console.log("hello")}, 3000);
-  createGrids_v2();
-  getKeys();
+  createGrids();
+  registerKeysFunc();
   getValue();
   $('.grid-stack').on('resizestop', function(){
     setTimeout(function(){window.dispatchEvent(new Event('resize'));}, 200);
