--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="../static/js/jquery-2.1.4.min.js"></script>
   <script src="../static/js/bootstrap-3.3.5.min.js"></script>
-  <script src="../static/js/dash-0.1.2.js"></script>
+  <script src="../static/js/dash-0.1.3.js"></script>
   <script src="../static/js/d3-3.5.6.min.js"></script>
   <script src="../static/js/nv.d3-1.7.1.js"></script>
-  <script src="../static/js/dash.vis-0.1.2.js"></script>
+  <script src="../static/js/dash.vis-0.1.3.js"></script>
   <script src="../static/js/jquery-watch-1.16.js"></script>
   <script src="../static/js/lodash-3.10.1.min.js"></script>
   <script src="../static/js/jquery-ui-1.11.4.min.js"></script>
@@ -54,6 +54,10 @@
 
     <!-- main content container -->
     <div id="main-content" class="htmleaf-container">
+      <div style="padding-left: 93%;">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal"><i class="fa fa-fw fa-lg fa-plus"></i> Add</button>
+      </div>
+
       <div class="table-responsive">
         <table id="my" class="table table-hover" data-toggle="table">
           <thead>
@@ -67,6 +71,32 @@
           <tbody id="dash_list">
           </tbody>
         </table>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Editor Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <!-- Editor Modal Header -->
+      <div class="modal-header" style="padding: 5px;">
+        <h5 class="modal-title" id="myModalLabel">Edit your dash graph</h5>
+      </div>
+      <!-- Editor Modal Content -->
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label>dashboard name</label>
+            <input class="form-control" id="name">
+          </div>
+          <div class="form-group">
+            <label>author</label>
+            <input class="form-control" id="author">
+          </div>
+          <button id="submit" class="btn btn-default">Submit</button>
+        </form>
       </div>
     </div>
   </div>
