ready to merge into master

--- a/dashboard/static/css/dash-0.1.3.css
+++ b/dashboard/static/css/dash-0.1.3.css
@@ -63,8 +63,9 @@ body {
     background: red!important;
 }
 
-.parent-box {
+.parent-box .grid-stack {
     /*margin: 10px;*/
+    background-color: inherit;
 }
 
 .navbar-vertical-left {
