--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="../static/css/gridstack.css">
 </head>
 
-<body>
+<body style="background-color: initial;">
 
     <!-- Main Content Area -->
     <div class="container container-box">
@@ -41,7 +41,7 @@
 
             <!-- navigate left side bar -->
             <nav id="nav" class="navbar navbar-vertical-left" onmousemove="resizeContent(1)" onmouseout="resizeContent(2)">
-                <ul class="nav navbar-nav" style="height: 250px;">
+                <ul class="nav navbar-nav" style="height: 200px;">
                     <li><a href=""></a>
                     </li>
                     <li><a href="/">
@@ -49,9 +49,7 @@
                     </li>
                     <li><a href=""><i class="fa fa-fw fa-lg fa-database"></i><span>SQL</span></a>
                     </li>
-                    <li><a href="http://litaotao.github.io/IPython-Dashboard/" target="_blank"><i class="fa fa-fw fa-lg fa-question-circle"></i><span>Help</span></a>
-                    </li>
-                    <li><a href="https://github.com/litaotao/IPython-Dashboard" target="_blank"><i class="fa fa-fw fa-lg fa-github"></i><span>Github</span></a>
+                    <li><a href="https://github.com/litaotao/IPython-Dashboard/issues" target="_blank"><i class="fa fa-fw fa-lg fa-question-circle"></i><span>Help</span></a>
                     </li>
                 </ul>
             </nav>
