update readme, update a screenshot and some typo

--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -30,7 +30,7 @@
         <div class="modal-content">
             <!-- Editor Modal Header -->
             <div class="modal-header" style="padding: 5px;">
-                <h5 class="modal-title" id="myModalLabel">Edit your dash graph</h5>
+                <h5 class="modal-title" id="myModalLabel">Create dashboard</h5>
             </div>
             <!-- Editor Modal Content -->
             <div class="modal-body">
@@ -43,7 +43,7 @@
                         <label>author</label>
                         <input class="form-control" id="author">
                     </div>
-                    <button id="submit" class="btn btn-default">Submit</button>
+                    <button id="submit" class="btn btn-default" style="margin-left: 88%;">create</button>
                 </form>
             </div>
         </div>
