--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -68,6 +68,11 @@
 {% endblock %}
 
 {% block script %}
+
+<script type"text/javascript">
+    store.set("api_root", $("meta[name=api_root]")[0].attributes.value.value;)
+</script>
+
 <script type="text/javascript">
 $(document).ready(function() {
     setTimeout(function(){}, 3000);
