--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -52,12 +52,17 @@
 {% endblock %}
 
 {% block script %}
+
+<script type"text/javascript">
+    store.set("api_root", $("meta[name=api_root]")[0].attributes.value.value);
+</script>
+
 <script type="text/javascript">
-initDashList();
-$(document).ready(function(){
-    $(function(){
-        $("#my").tablesorter({ sortList: [[2, 1]] });
+    initDashList();
+    $(document).ready(function(){
+        $(function(){
+            $("#my").tablesorter({ sortList: [[2, 1]] });
+        });
     });
-});
 </script>
 {% endblock %}
