--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="dash_id" value={{dash_id}}>
+    <meta name="api_root" value={{api_root}}>
     <script src="../static/js/jquery-2.1.4.min.js"></script>
     <script src="../static/js/bootstrap-3.3.5.min.js"></script>
     <script src="../static/js/dash-0.1.3.js"></script>
@@ -34,34 +35,40 @@
 </head>
 
 <body style="background-color: initial;">
+    <!-- Message Display Bar -->
+	<div class="alert alert-danger error_msg" id="error">
+        <p align="center" id="error_msg" class="error_msg_text">
+        </p>
+	</div>
 
-    <!-- Main Content Area -->
-    <div class="container container-box">
-        <div class="main clearfix">
+    <div style="margin: 30px 40px;">
+        <!-- Main Content Area -->
+        <div class="container container-box">
+            <div class="main clearfix">
 
-            <!-- navigate left side bar -->
-            <nav id="nav" class="navbar navbar-vertical-left" onmousemove="resizeContent(1)" onmouseout="resizeContent(2)">
-                <ul class="nav navbar-nav" style="height: 200px;">
-                    <li><a href=""></a>
-                    </li>
-                    <li><a href="/">
-                        <i class="fa fa-fw fa-lg fa-tachometer"></i><span>Boards</span></a>
-                    </li>
-                    <li><a href=""><i class="fa fa-fw fa-lg fa-database"></i><span>SQL</span></a>
-                    </li>
-                    <li><a href="https://github.com/litaotao/IPython-Dashboard/issues" target="_blank"><i class="fa fa-fw fa-lg fa-question-circle"></i><span>Help</span></a>
-                    </li>
-                </ul>
-            </nav>
+                <!-- navigate left side bar -->
+                <nav id="nav" class="navbar navbar-vertical-left" onmousemove="resizeContent(1)" onmouseout="resizeContent(2)">
+                    <ul class="nav navbar-nav" style="height: 200px;">
+                        <li><a href=""></a>
+                        </li>
+                        <li><a href="/">
+                            <i class="fa fa-fw fa-lg fa-tachometer"></i><span>Boards</span></a>
+                        </li>
+                        <li><a href=""><i class="fa fa-fw fa-lg fa-database"></i><span>SQL</span></a>
+                        </li>
+                        <li><a href="https://github.com/litaotao/IPython-Dashboard/issues" target="_blank"><i class="fa fa-fw fa-lg fa-question-circle"></i><span>Help</span></a>
+                        </li>
+                    </ul>
+                </nav>
 
-            <!-- main content container -->
-            {% block main_content %}{% endblock %}
+                <!-- main content container -->
+                {% block main_content %}{% endblock %}
+            </div>
         </div>
+
+        <!-- Editor Modal -->
+        {% block editor_modal %}{% endblock %}
     </div>
-
-    <!-- Editor Modal -->
-    {% block editor_modal %}{% endblock %}
-
     <!-- script -->
     {% block script %}{% endblock %}
 </body>
