--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -70,7 +70,8 @@
 {% block script %}
 
 <script type"text/javascript">
-    store.set("api_root", $("meta[name=api_root]")[0].attributes.value.value;)
+    store.set("api_root", "http://" + $("meta[name=api_root]")[0].attributes.value.value + "/");
+    api_root = store.get("api_root");
 </script>
 
 <script type="text/javascript">
