--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -75,6 +75,7 @@
 </script>
 
 <script type="text/javascript">
+
 $(document).ready(function() {
     setTimeout(function(){}, 3000);
     initGridstack();
@@ -85,6 +86,7 @@ $(document).ready(function() {
     $('.grid-stack').on('resizestop', function(){
         setTimeout(function(){window.dispatchEvent(new Event('resize'));}, 200);
     });
+    my_alert("loading done ...");
 });
 
 $('.btn-chart').click(function(e) {
