--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -65,5 +65,6 @@
             $("#my").tablesorter({ sortList: [[2, 1]] });
         });
     });
+    // my_alert("welcome to the dashboard");
 </script>
 {% endblock %}
