sql page almost done

--- a/dashboard/static/css/dash-0.1.3.css
+++ b/dashboard/static/css/dash-0.1.3.css
@@ -243,7 +243,7 @@ related questions: http://stackoverflow.com/questions/23333231/bootstrap-button-
 }
 
 .editor {
-    position: absolute;
-    width: 93%;
-    height: 300px;
+    /*position: absolute;*/
+    width: inherit;
+    height: inherit;
 }
