--- a/dashboard/templates/sql.html
+++ b/dashboard/templates/sql.html
@@ -2,61 +2,48 @@
 {% extends "layout.html" %}
 
 {% block main_content %}
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="editor">
-                <div id="editor">select * from ;</div>
-            </div>
-        </div>
-        <div class="col-xs-12">
-            <div class="btn-group" role="group" aria-label="...">
-                <button type="button" class="btn btn-default">Left</button>
-                <button type="button" class="btn btn-default">Middle</button>
-                <button type="button" class="btn btn-default">Right</button>
-            </div>
-        </div>
-    </div>
-    <div class="row"></div>
-</div>
-
-    <!-- <div>
-        <div class="editor">
-            <div id="editor">select * from ;</div>
-        </div>
-    </div>
-
-    <hr style="margin: 5px 0px; color: green;">
-
-    <div class="btn-group" role="group" aria-label="...">
-        <button type="button" class="btn btn-default">Left</button>
-        <button type="button" class="btn btn-default">Middle</button>
-        <button type="button" class="btn btn-default">Right</button>
-    </div> -->
-
-    <!-- <div>
+    <div id="main-content">
         <div>
-            <table class="table input-title-level-2">
-                <tbody>
-                    <tr class="active">
-                        <td style="padding: 0px; width: 70%; background-color: white;border: none;">
-                            <div class="btn-group" id="graph-type">
-                                <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartIntoModal('table')"><i class="fa fa-fw fa-lg fa-table"></i></button>
-                                <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartIntoModal('bar')"><i class="fa fa-fw fa-lg fa-bar-chart-o"></i></button>
-                                <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartIntoModal('line')"><i class="fa fa-fw fa-lg fa-line-chart"></i></button>
-                                <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartIntoModal('pie')"><i class="fa fa-fw fa-lg fa-pie-chart"></i></button>
-                                <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartIntoModal('area')"><i class="fa fa-fw fa-lg fa-area-chart"></i></button>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <hr style="margin: 5px 0px; color: green;">
-        <div id="value" style="width: 100%; height: 500px; overflow-x:auto; overflow-y:auto;">
-        </div>
-    </div> -->
+            <!-- <textarea> -->
+            <div class="btn-group" id="graph-type">
+                <button type="button" class="btn btn-default btn-sm btn-chart" onclick=""><i class="fa fa-fw fa-lg fa-sort-amount-asc"></i>run all</button>
+                <button type="button" class="btn btn-default btn-sm btn-chart" onclick=""><i class="fa fa-fw fa-lg fa-shield"></i>run selected</button>
+                <button type="button" class="btn btn-default btn-sm btn-chart" onclick=""><i class="fa fa-fw fa-lg fa-level-up"></i>run first</button>
+                <button type="button" class="btn btn-default btn-sm btn-chart" onclick=""><i class="fa fa-fw fa-lg fa-level-down"></i>run last</button>
+                <button type="button" class="btn btn-default btn-sm btn-chart" onclick=""><i class="fa fa-fw fa-lg fa-outdent"></i> format</button>
+            </div>
+            <div style="width: 100%; height: 300px">
+                <div class="editor" type=textarea>
+                   <div id="editor">select * from ;</div>
+                </div>
+            </div>
 
+            <!-- </textarea> -->
+       </div>
+
+        <div>
+            <div>
+                <table class="table" style="margin-top: 20px; margin-bottom: 0px">
+                    <tbody>
+                        <tr class="active">
+                            <td style="padding: 0px; width: 70%; background-color: white;border: none;">
+                                <div class="btn-group" id="graph-type" style="padding-left: 0px;">
+                                    <button type="button" class="btn btn-default btn-sm btn-chart" onclick=""><i class="fa fa-fw fa-lg fa-table"></i></button>
+                                    <button type="button" class="btn btn-default btn-sm btn-chart" onclick=""><i class="fa fa-fw fa-lg fa-bar-chart-o"></i></button>
+                                    <button type="button" class="btn btn-default btn-sm btn-chart" onclick=""><i class="fa fa-fw fa-lg fa-line-chart"></i></button>
+                                    <button type="button" class="btn btn-default btn-sm btn-chart" onclick=""><i class="fa fa-fw fa-lg fa-pie-chart"></i></button>
+                                    <button type="button" class="btn btn-default btn-sm btn-chart" onclick=""><i class="fa fa-fw fa-lg fa-area-chart"></i></button>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <hr style="margin: 5px 0px; color: green;">
+            <div id="value" style="width: 100%; height: 500px; overflow-x:auto; overflow-y:auto;">
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block editor_modal %}
@@ -76,7 +63,7 @@
 
 {% block script %}
 <script>
-    var editor = ace.edit("editor");
+    editor = ace.edit("editor");
     editor.setTheme("ace/theme/sqlserver");
     var sqlMode = ace.require("ace/mode/mysql").Mode;
     editor.session.setMode(new sqlMode());
