--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -10,9 +10,10 @@
     <script src="../static/js/jquery-2.1.4.min.js"></script>
     <script src="../static/js/bootstrap-3.3.5.min.js"></script>
     <script src="../static/js/dash-0.1.3.js"></script>
+    <script src="../static/js/dash.vis-0.1.3.js"></script>
+    <script src="../static/js/dash.sql-0.1.3.js"></script>
     <script src="../static/js/d3-3.5.6.js"></script>
     <script src="../static/js/nv.d3-1.8.1.js"></script>
-    <script src="../static/js/dash.vis-0.1.3.js"></script>
     <script src="../static/js/jquery-watch-1.16.js"></script>
     <script src="../static/js/lodash-3.10.1.min.js"></script>
     <script src="../static/js/jquery-ui-1.11.4.min.js"></script>
@@ -34,6 +35,7 @@
     <link rel="stylesheet" href="../static/css/nv.d3.css">
     <link rel="stylesheet" href="../static/css/dash-0.1.3.css">
     <link rel="stylesheet" href="../static/css/gridstack.css">
+    <link rel="stylesheet" href="../static/css/pygments.css">
 </head>
 
 <body style="background-color: initial;">
